# app/Http/Controllers/Api/V1/HomeApiController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers\Api\V1;
 
 use App\Http\Controllers\Controller;
+use App\Http\Repositories\ProductRepository;
 use App\Http\services\Keys;
 use App\Models\Category;
 use App\Models\Slider;
@@ -10,6 +11,20 @@ use Illuminate\Http\Request;
 
 class HomeApiController extends Controller
 {
+    /**
+     * @OA\Get(
+     ** path="/api/v1/home",
+     *  tags={"Home Page"},
+     *  description="get home page data",
+     *   @OA\Response(
+     *      response=200,
+     *      description="Its Ok",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   )
+     *)
+     **/
     public function home()
     {
         return response()->json([
@@ -18,10 +33,10 @@ class HomeApiController extends Controller
            'data' => [
                Keys::sliders => Slider::getSliders(),
                keys::categories => Category::getAllCategories(),
-               Keys::amazing_products => '',
+               Keys::amazing_products => ProductRepository::get6AmazingProducts(),
                Keys::baner => Slider::query()->inRandomOrder()->first(),
-               Keys::most_seller_products => '',
-               Keys::newest_products => '',
+               Keys::most_seller_products => ProductRepository::get6MostSellerProducts(),
+               Keys::newest_products => ProductRepository::get6NewestProducts(),
            ]
         ], 200);
     }
